--- a/index.html
+++ b/index.html
@@ -46,3 +46,7 @@
                                           aria-label="Search" />
                                     <button class="btn btn-outline-light" type="submit">Cerca</button>
                               </form>
+                        </div>
+                  </div>
+            </nav>
+      </header>
