--- a/index.html
+++ b/index.html
@@ -50,3 +50,12 @@
                   </div>
             </nav>
       </header>
+      <main>
+            <div class="container">
+                  <div class="row mt-4">
+                        <div class="col-12 col-lg-8 mb-3">
+                              <div class="card">
+                                    <div class="card-header d-flex justify-content-between align-items-center">
+                                          <h2>Catalogo Libri</h2>
+                                          <a href="./help.html" class="btn btn-primary btn-sm"> Aggiungi libro</a>
+                                    </div>
