--- a/index.html
+++ b/index.html
@@ -57,5 +57,30 @@
                               <div class="card">
                                     <div class="card-header d-flex justify-content-between align-items-center">
                                           <h2>Catalogo Libri</h2>
-                                          <a href="./help.html" class="btn btn-primary btn-sm"> Aggiungi libro</a>
+                                          <a href="./form.html" class="btn btn-primary btn-sm"> Aggiungi libro</a>
                                     </div>
+                                    <div class="card-body">
+                                          <table class="table table-striped">
+                                                <thead>
+                                                      <tr>
+                                                            <th>Titolo</th>
+                                                            <th class="d-none d-sm-table-cell">Data prestito</th>
+                                                            <th>Stato</th>
+                                                            <th>Azioni</th>
+                                                      </tr>
+                                                </thead>
+                                                <tbody>
+                                                      <tr>
+                                                            <td>I pilastri della terra</td>
+                                                            <td class="d-none d-sm-table-cell">-</td>
+                                                            <td><span class="badge text-bg-success">Disponibile</span>
+                                                            </td>
+                                                            <td class="d-flex gap-2"><a
+                                                                        class="btn btn-secondary bg-light text-secondary"
+                                                                        href="#">
+                                                                        <i class="fa-solid fa-pencil"></i>
+                                                                        <a class="btn btn-secondary bg-light text-secondary"
+                                                                              href="#">
+                                                                              <i class="fa-solid fa-trash"></i>
+                                                                        </a>
+                                                                  </a>
