--- a/index.html
+++ b/index.html
@@ -83,4 +83,21 @@
                                                                               href="#">
                                                                               <i class="fa-solid fa-trash"></i>
                                                                         </a>
+                                                            </td>
+                                                            </a>
+                                                      </tr>
+                                                      <td>I Promessi Sposi</td>
+                                                      <td class="d-none d-sm-table-cell">-</td>
+                                                      <td><span class="badge text-bg-success">Disponibile</span>
+                                                      </td>
+                                                      <td class="d-flex gap-2"><a
+                                                                  class="btn btn-secondary bg-light text-secondary"
+                                                                  href="#">
+                                                                  <i class="fa-solid fa-pencil"></i>
+                                                                  <a class="btn btn-secondary bg-light text-secondary"
+                                                                        href="#">
+                                                                        <i class="fa-solid fa-trash"></i>
                                                                   </a>
+                                                      </td>
+                                                      </a>
+                                                      </tr>
