--- a/index.html
+++ b/index.html
@@ -101,3 +101,20 @@
                                                       </td>
                                                       </a>
                                                       </tr>
+                                                      <tr>
+                                                            <td>Il nome della rosa</td>
+                                                            <td class="d-none d-sm-table-cell">18/10/2023</td>
+                                                            <td><span class="badge text-bg-warning">In Prestito</span>
+                                                            </td>
+                                                            <td class="d-flex gap-2"><a
+                                                                        class="btn btn-secondary bg-light text-secondary"
+                                                                        href="#">
+                                                                        <i class="fa-solid fa-pencil"></i>
+                                                                        <a class="btn btn-secondary bg-light text-secondary"
+                                                                              href="#">
+                                                                              <i class="fa-solid fa-trash"></i>
+                                                                        </a>
+                                                            </td>
+                                                            </a>
+
+                                                      </tr>
