--- a/index.html
+++ b/index.html
@@ -118,3 +118,83 @@
                                                             </a>
 
                                                       </tr>
+                                                      <td>Harry Potter e la pietra filosofale</td>
+                                                      <td class="d-none d-sm-table-cell">-</td>
+                                                      <td><span class="badge text-bg-success">Dispondibile</span>
+                                                      </td>
+                                                      <td class="d-flex gap-2"><a
+                                                                  class="btn btn-secondary bg-light text-secondary"
+                                                                  href="#">
+                                                                  <i class="fa-solid fa-pencil"></i>
+                                                                  <a class="btn btn-secondary bg-light text-secondary"
+                                                                        href="#">
+                                                                        <i class="fa-solid fa-trash"></i>
+                                                                  </a>
+                                                      </td>
+                                                      </a>
+
+                                                      </tr>
+                                                      <td>Il Codice da Vinci</td>
+                                                      <td class="d-none d-sm-table-cell">-</td>
+                                                      <td><span class="badge text-bg-danger">Non Disponibile</span>
+                                                      </td>
+                                                      <td class="d-flex gap-2"><a
+                                                                  class="btn btn-secondary bg-light text-secondary"
+                                                                  href="#">
+                                                                  <i class="fa-solid fa-pencil"></i>
+                                                                  <a class="btn btn-secondary bg-light text-secondary"
+                                                                        href="#">
+                                                                        <i class="fa-solid fa-trash"></i>
+                                                                  </a>
+                                                      </td>
+                                                      </a>
+
+                                                      </tr>
+                                                      <td>Shinning</td>
+                                                      <td class="d-none d-sm-table-cell">-</td>
+                                                      <td><span class="badge text-bg-success">Disponibile</span>
+                                                      </td>
+                                                      <td class="d-flex gap-2"><a
+                                                                  class="btn btn-secondary bg-light text-secondary"
+                                                                  href="#">
+                                                                  <i class="fa-solid fa-pencil"></i>
+                                                                  <a class="btn btn-secondary bg-light text-secondary"
+                                                                        href="#">
+                                                                        <i class="fa-solid fa-trash"></i>
+                                                                  </a>
+                                                      </td>
+                                                      </a>
+
+                                                      </tr>
+                                                      <td>La Divina Commedia</td>
+                                                      <td class="d-none d-sm-table-cell">21/09/2023</td>
+                                                      <td><span class="badge text-bg-warning">In Prestito</span>
+                                                      </td>
+                                                      <td class="d-flex gap-2"><a
+                                                                  class="btn btn-secondary bg-light text-secondary"
+                                                                  href="#">
+                                                                  <i class="fa-solid fa-pencil"></i>
+                                                                  <a class="btn btn-secondary bg-light text-secondary"
+                                                                        href="#">
+                                                                        <i class="fa-solid fa-trash"></i>
+                                                                  </a>
+                                                      </td>
+                                                      </a>
+
+                                                      </tr>
+                                                      <td>Il Trono di Spade</td>
+                                                      <td class="d-none d-sm-table-cell">-</td>
+                                                      <td><span class="badge text-bg-success">Disponibile</span>
+                                                      </td>
+                                                      <td class="d-flex gap-2"><a
+                                                                  class="btn btn-secondary bg-light text-secondary"
+                                                                  href="#">
+                                                                  <i class="fa-solid fa-pencil"></i>
+                                                                  <a class="btn btn-secondary bg-light text-secondary"
+                                                                        href="#">
+                                                                        <i class="fa-solid fa-trash"></i>
+                                                                  </a>
+                                                      </td>
+                                                      </a>
+
+                                                      </tr>
