fine Prima Tabella

--- a/index.html
+++ b/index.html
@@ -198,3 +198,69 @@
                                                       </a>
 
                                                       </tr>
+
+                                                      <td>Il Mondo di Sofia</td>
+                                                      <td class="d-none d-sm-table-cell">-</td>
+                                                      <td><span class="badge text-bg-danger"> Non Disponibile</span>
+                                                      </td>
+                                                      <td class="d-flex gap-2"><a
+                                                                  class="btn btn-secondary bg-light text-secondary"
+                                                                  href="#">
+                                                                  <i class="fa-solid fa-pencil"></i>
+                                                                  <a class="btn btn-secondary bg-light text-secondary"
+                                                                        href="#">
+                                                                        <i class="fa-solid fa-trash"></i>
+                                                                  </a>
+                                                      </td>
+                                                      </a>
+
+                                                      </tr>
+
+                                                      <td>Le Cronache di Narnia: Il Leone. La Strega e L'armadio</td>
+                                                      <td class="d-none d-sm-table-cell">25/07/2023</td>
+                                                      <td><span class="badge text-bg-warning">In Prestito</span>
+                                                      </td>
+                                                      <td class="d-flex gap-2"><a
+                                                                  class="btn btn-secondary bg-light text-secondary"
+                                                                  href="#">
+                                                                  <i class="fa-solid fa-pencil"></i>
+                                                                  <a class="btn btn-secondary bg-light text-secondary"
+                                                                        href="#">
+                                                                        <i class="fa-solid fa-trash"></i>
+                                                                  </a>
+                                                      </td>
+                                                      </a>
+
+                                                      </tr>
+
+                                                      <td>Il Piccolo Principe</td>
+                                                      <td class="d-none d-sm-table-cell">-</td>
+                                                      <td><span class="badge text-bg-success">Disponibile</span>
+                                                      </td>
+                                                      <td class="d-flex gap-2"><a
+                                                                  class="btn btn-secondary bg-light text-secondary"
+                                                                  href="#">
+                                                                  <i class="fa-solid fa-pencil"></i>
+                                                                  <a class="btn btn-secondary bg-light text-secondary"
+                                                                        href="#">
+                                                                        <i class="fa-solid fa-trash"></i>
+                                                                  </a>
+                                                      </td>
+                                                      </a>
+                                                      </tr>
+
+                                                      <td>La Storia Infinita</td>
+                                                      <td class="d-none d-sm-table-cell">-</td>
+                                                      <td><span class="badge text-bg-success">Disponibile</span>
+                                                      </td>
+                                                      <td class="d-flex gap-2"><a
+                                                                  class="btn btn-secondary bg-light text-secondary"
+                                                                  href="#">
+                                                                  <i class="fa-solid fa-pencil"></i>
+                                                                  <a class="btn btn-secondary bg-light text-secondary"
+                                                                        href="#">
+                                                                        <i class="fa-solid fa-trash"></i>
+                                                                  </a>
+                                                      </td>
+                                                      </a>
+                                                      </tr>
