modifica chiusura tabella

--- a/index.html
+++ b/index.html
@@ -262,5 +262,9 @@
                                                                         <i class="fa-solid fa-trash"></i>
                                                                   </a>
                                                       </td>
-                                                      </a>
                                                       </tr>
+                                                </tbody>
+                                          </table>
+                                    </div>
+                              </div>
+                        </div>
