--- a/index.html
+++ b/index.html
@@ -249,18 +249,18 @@
                                                       </a>
                                                       </tr>
 
-                                                      <td>La Storia Infinita</td>
+                                                      <td>la storia infinita</td>
                                                       <td class="d-none d-sm-table-cell">-</td>
-                                                      <td><span class="badge text-bg-success">Disponibile</span>
-                                                      </td>
+                                                      <td><span class="badge text-bg-success">Disponibile</span></td>
                                                       <td class="d-flex gap-2"><a
                                                                   class="btn btn-secondary bg-light text-secondary"
                                                                   href="#">
                                                                   <i class="fa-solid fa-pencil"></i>
-                                                                  <a class="btn btn-secondary bg-light text-secondary"
-                                                                        href="#">
-                                                                        <i class="fa-solid fa-trash"></i>
-                                                                  </a>
+                                                            </a>
+                                                            <a class="btn btn-secondary bg-light text-secondary"
+                                                                  href="#">
+                                                                  <i class="fa-solid fa-trash"></i>
+                                                            </a>
                                                       </td>
                                                       </tr>
                                                 </tbody>
@@ -268,3 +268,115 @@
                                     </div>
                               </div>
                         </div>
+                        <!--Checkbox card-->
+                        <div class="col-12 col-lg-4">
+                              <div class="card">
+                                    <div class="card-header">
+                                          <h2>Todo</h2>
+                                    </div>
+                                    <div class="card-body">
+                                          <ul class="list-group">
+                                                <li class="list-group-item">
+                                                      <input class="form-check-input" type="checkbox" value=""
+                                                            id="defaultCheck1">
+                                                      <label class="form-check-label fw-normal" for="defaultCheck1">
+                                                            Chiamare segreteria
+                                                      </label>
+                                                </li>
+                                                <li class="list-group-item">
+                                                      <input class="form-check-input" type="checkbox" value=""
+                                                            id="defaultCheck1">
+                                                      <label class="form-check-label fw-normal" for="defaultCheck1">
+                                                            Mandare avvisi prestiti scaduti
+                                                      </label>
+                                                </li>
+                                                <li class="list-group-item">
+                                                      <input class="form-check-input" type="checkbox" value=""
+                                                            id="defaultCheck1">
+                                                      <label class="form-check-label fw-normal" for="defaultCheck1">
+                                                            Ordinare nuovi libri
+                                                      </label>
+                                                </li>
+                                          </ul>
+                                    </div>
+                              </div>
+                              <!--FAQ card-->
+                              <div class="card mt-3">
+                                    <div class="card-header">
+                                          <h2>F.A.Q.</h2>
+                                    </div>
+                                    <div class="card-body">
+                                          <div class="accordion accordion-flush" id="accordionFlushExample">
+                                                <div class="accordion-item">
+                                                      <h2 class="accordion-header">
+                                                            <button class="accordion-button collapsed" type="button"
+                                                                  data-bs-toggle="collapse"
+                                                                  data-bs-target="#flush-collapseOne"
+                                                                  aria-expanded="false"
+                                                                  aria-controls="flush-collapseOne">
+                                                                  Come aggiungere un nuovo libro?
+                                                            </button>
+                                                      </h2>
+                                                      <div id="flush-collapseOne" class="accordion-collapse collapse"
+                                                            data-bs-parent="#accordionFlushExample">
+                                                            <div class="accordion-body">Lorem ipsum dolor sit, amet
+                                                                  consectetur adipisicing elit. Saepe
+                                                                  nesciunt, corrupti error voluptate, similique quod
+                                                                  obcaecati sed exercitationem, soluta animi
+                                                                  perferendis odio! Nobis veritatis impedit amet quasi
+                                                                  dolore asperiores soluta.</div>
+                                                      </div>
+                                                </div>
+                                                <div class="accordion-item">
+                                                      <h2 class="accordion-header">
+                                                            <button class="accordion-button collapsed" type="button"
+                                                                  data-bs-toggle="collapse"
+                                                                  data-bs-target="#flush-collapseTwo"
+                                                                  aria-expanded="false"
+                                                                  aria-controls="flush-collapseTwo">
+                                                                  Come posso accedere all'anagrafica utenti?
+                                                            </button>
+                                                      </h2>
+                                                      <div id="flush-collapseTwo" class="accordion-collapse collapse"
+                                                            data-bs-parent="#accordionFlushExample">
+                                                            <div class="accordion-body">Lorem ipsum dolor sit amet
+                                                                  consectetur adipisicing elit. Velit molestias
+                                                                  possimus doloribus consequatur inventore impedit
+                                                                  magnam. Voluptate aliquam obcaecati corporis
+                                                                  vitae tempore? Perspiciatis eum earum harum quia,
+                                                                  fugit officiis doloribus!</div>
+                                                      </div>
+                                                </div>
+                                                <div class="accordion-item">
+                                                      <h2 class="accordion-header">
+                                                            <button class="accordion-button collapsed" type="button"
+                                                                  data-bs-toggle="collapse"
+                                                                  data-bs-target="#flush-collapseThree"
+                                                                  aria-expanded="false"
+                                                                  aria-controls="flush-collapseThree">
+                                                                  Posso usare questa dashboard da mobile?
+                                                            </button>
+                                                      </h2>
+                                                      <div id="flush-collapseThree" class="accordion-collapse collapse"
+                                                            data-bs-parent="#accordionFlushExample">
+                                                            <div class="accordion-body">Lorem ipsum dolor, sit amet
+                                                                  consectetur adipisicing elit. Numquam, modi
+                                                                  distinctio quae illum fuga, veritatis obcaecati vero
+                                                                  eaque repellat dolorem blanditiis ullam
+                                                                  voluptatum! Molestias iusto nihil, velit vel libero
+                                                                  accusamus.</div>
+                                                      </div>
+                                                </div>
+                                          </div>
+                                    </div>
+                              </div>
+                        </div>
+                  </div>
+      </main>
+      </div>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
+            crossorigin="anonymous"></script>
+</body>
+
+</html>
