change tittle to "Renamed dashboard to new book

--- a/new book form.html
+++ b/new book form.html
@@ -50,9 +50,23 @@
                   </div>
             </nav>
       </header>
-      <main class="container">
-            <h3 class="text-left">Nuovo Libro</h3>
+      <!-- FORM NUOVO LIBRO -->
+      <div class="container my-5">
+            <h1 class="mb-4">Nuovo Libro</h1>
             <form>
+                  <!-- Nome e Cognome Autore -->
+                  <div class="row mb-3">
+                        <div class="col-md-6">
+                              <label for="nome-autore" class="form-label">Nome Autore</label>
+                              <input type="text" class="form-control" id="nome-autore"
+                                    placeholder="Inserisci il nome dell'autore">
+                        </div>
+                        <div class="col-md-6">
+                              <label for="cognome-autore" class="form-label">Cognome Autore</label>
+                              <input type="text" class="form-control" id="cognome-autore"
+                                    placeholder="Inserisci il cognome dell'autore">
+                        </div>
+                  </div>
 
 
-      </main>
+                  </main>
