Genere Anno isbn

--- a/new book form.html
+++ b/new book form.html
@@ -67,6 +67,32 @@
                                     placeholder="Inserisci il cognome dell'autore">
                         </div>
                   </div>
+                  <!-- Title -->
+                  <div class="mb-3">
+                        <label for="titolo" class="form-label">Titolo</label>
+                        <input type="text" class="form-control" id="titolo" placeholder="Inserisci il titolo del libro">
+                        <div class="form-text">Titolo versione italiana</div>
+                  </div>
+                  <!-- Genere, Anno, ISBN -->
+                  <div class="row mb-3">
+                        <div class="col-md-4">
+                              <label for="genere" class="form-label">Genere</label>
+                              <select class="form-select" id="genere">
+                                    <option selected>Scegli il genere</option>
+                                    <option value="1">Romanzo</option>
+                                    <option value="2">Saggio</option>
+                                    <option value="3">Biografia</option>
+                              </select>
+                        </div>
+                        <div class="col-md-4">
+                              <label for="anno" class="form-label">Anno di Pubblicazione</label>
+                              <input type="number" class="form-control" id="anno" placeholder="Inserisci l'anno">
+                        </div>
+                        <div class="col-md-4">
+                              <label for="isbn" class="form-label">ISBN#</label>
+                              <input type="text" class="form-control" id="isbn" placeholder="Inserisci il codice ISBN#">
+                        </div>
+                  </div>
 
 
                   </main>
