--- a/new book form.html
+++ b/new book form.html
@@ -93,6 +93,12 @@
                               <input type="text" class="form-control" id="isbn" placeholder="Inserisci il codice ISBN#">
                         </div>
                   </div>
+                  <!-- Note -->
+                  <div class="mb-3">
+                        <label for="note" class="form-label">Note</label>
+                        <textarea class="form-control" id="note" rows="4"
+                              placeholder="Inserisci eventuali note sul libro"></textarea>
+                  </div>
 
 
                   </main>
