--- a/new book form.html
+++ b/new book form.html
@@ -99,6 +99,20 @@
                         <textarea class="form-control" id="note" rows="4"
                               placeholder="Inserisci eventuali note sul libro"></textarea>
                   </div>
+                  <div class="form-check mb-3">
+                        <input class="form-check-input" type="checkbox" id="digitale">
+                        <label class="form-check-label" for="digitale">
+                              Disponibile anche in digitale
+                        </label>
+                  </div>
+                  <!-- Pulsante -->
+                  <button type="submit" class="btn btn-primary">Aggiungi Libro</button>
+            </form>
+      </div>
 
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+</body>
 
-                  </main>
+</html>
+
+</main>
